--- a/kadai_005/html/kadai_005.html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html/kadai_005.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>５章課題</title>
   <meta name="description" content="このページは5章課題です。">
@@ -12,3 +13,4 @@
   <br>
   <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
+</html>
